<resources>
    <string name="app_name">Jitsi</string>
    <string name="username_hint">username@example.com</string>
    <string name="password">password</string>
    <string name="choose_network">Choose a network</string>
    <string name="service_gui_SIGN_IN">Sign in</string>
    <string name="service_gui_PREF_SECURITY_ENCRYPTION" >
        Communication encryption
    </string>
    <string name="service_gui_PREF_SECURITY_ENC_PROTOCOLS" >
        Encryption protocols
    </string>
    <string name="service_gui_PREF_SECURITY_ZRTP" >ZRTP options</string>
    <string name="service_gui_PREF_SECURITY_ZRTP_SIGNALING" >
        ZRTP signaling
    </string>
    <string name="service_gui_PREF_SECURITY_SDES" >SDes options</string>
    <string name="service_gui_PREF_SECURITY_SDES_TITLE">
        SDES cipher suites
    </string>
    <string name="service_gui_PREF_SECURITY_SDES_DLG_TITLE">
        Select desired cipher suites
    </string>
    <string name="service_gui_PREF_SECURITY_RTP_SAVP">
        RTP/SAVP indication
    </string>
    <string name="service_gui_PREF_SECURITY_RTP_SAVP_TITLE">
        RTP/SAVP indication method
    </string>
    <string name="service_gui_PREF_AUDIO_ENCODING" >Audio encoding</string>
    <string name="service_gui_PREF_AUDIO_ENC_SUMMARY" >
        Select audio formats
    </string>
    <string name="service_gui_PREF_VIDEO_ENCODING" >Video encoding</string>
    <string name="service_gui_PREF_VIDEO_ENC_SUMMARY" >
        Select video formats
    </string>
    <string name="service_gui_PREF_ENCRYPTION" >Encryption settings</string>
    <string name="service_gui_JBR_USER_CATEGORY" >User name and password</string>
    <string name="service_gui_JBR_USER" >User id</string>
    <string name="service_gui_JBR_PASSWORD" >Enter password</string>
    <string name="service_gui_JBR_STORE_PASSWORD" >Remember password</string>
    <string name="service_gui_JBR_ADVANCED" >Advanced</string>
    <string name="service_gui_JBR_CONNECTION" >Connection</string>
    <string name="service_gui_JBR_CONN_SUMMARY" >
        Set connection details...
    </string>
    <string name="service_gui_JBR_CONN_GENERAL" >General</string>
    <string name="service_gui_JBR_GMAIL_NOTIFICATIONS" >
        Gmail notifications for new messages
    </string>
    <string name="service_gui_JBR_GOOGLE_CONTACTS_SEARCH" >
        Google Contacts search
    </string>
    <string name="service_gui_JBR_ALLOW_NON_SECURE" >
        Allow non-secure connections
    </string>
    <string name="service_gui_JBR_DTMF_METHOD" >DTMF method</string>
    <string name="service_gui_JBR_DTMF_SUMMARY" >DTMF method selection</string>
    <string name="service_gui_JBR_SERVER_OPTIONS" >Server options</string>
    <string name="service_gui_JBR_OVERRIDE_SERVER" >
        Override server default options
    </string>
    <string name="service_gui_JBR_SERVER" >Connect Server</string>
    <string name="service_gui_JBR_PORT" >Port</string>
    <string name="service_gui_JBR_RESOURCE" >Resource</string>
    <string name="service_gui_JBR_RES_AUTO_GEN" >Auto generate resource</string>
    <string name="service_gui_JBR_RESURCE_NAME" >Resource name</string>
    <string name="service_gui_JBR_PRIORITY" >Priority</string>
    <string name="service_gui_JBR_ICE" >ICE</string>
    <string name="service_gui_JBR_ICE_SUMMARY" >
        Configure ICE options...
    </string>
    <string name="service_gui_JBR_ICE_GENERAL" >General</string>
    <string name="service_gui_JBR_USE_ICE" >Use ICE</string>
    <string name="service_gui_JBR_USE_GOOGLE_ICE" >
        Use Google\'s Jingle/ICE(experimental)
    </string>
    <string name="service_gui_JBR_USE_UPNP" >Use UPnP</string>
    <string name="service_gui_JBR_AUTO_STUN_DICOVERY" >
        Auto discover STUN/TURN servers
    </string>
    <string name="service_gui_JBR_USE_DEFAULT_STUN" >
        Use Jitsi\'s STUN server in case no other servers are available
    </string>
    <string name="service_gui_JBR_STUN_LIST" >
        Additional STUN/TURN servers
    </string>
    <string name="service_gui_JBR_JINGLE_NODES" >Jingle Nodes</string>
    <string name="service_gui_JBR_JINGLE_SUMMARY" >Use jingle nodes</string>
    <string name="service_gui_JBR_JINGLE_AUTO" >
        Auto discover Jingle Nodes relays
    </string>
    <string name="service_gui_JBR_JINGLE_LIST" >Additional Jingle Nodes</string>
    <string name="service_gui_JBR_TELEPHONY" >Telephony</string>
    <string name="service_gui_JBR_TELEPHONY_SUMMARY" >
        Configure telephony options...
    </string>
    <string name="service_gui_JBR_DISABLE_JINGLE" >
        Disable Jingle (audio and video calls with XMPP)
    </string>
    <string name="service_gui_JBR_TELE_DOMAIN" >Telephony domain</string>
    <string name="service_gui_JBR_GTALK_DOMAIN" >
        Domain that will use GTalk call
    </string>
    <string name="pref_cat_account">pref_cat_account</string>
    <string name="pref_cat_audio_encoding">pref_cat_enc_audio</string>
    <string name="pref_cat_video_encoding">pref_cat_enc_video</string>
    <string name="pref_screen_jbr_conn">pref.screen.jbr.connection</string>
    <string name="pref_screen_jbr_ice">pref.screen.jbr.ice</string>
    <string name="pref_screen_jbr_tele">pref.screen.jbr.telephony</string>
    <string name="pref_cat_jbr_advanced">pref.cat.jbr.advanced</string>
    <string name="pref_cat_jbr_conn_general">pref.cat.jbr.conn.general</string>
    <string name="pref_cat_jbr_server_opts">pref.cat.jbr.server.options</string>
    <string name="pref_cat_jbr_resource">pref.cat.jbr.resource</string>
    <string name="pref_cat_jbr_ice_general">pref.cat.jbr.ice.general</string>
    <string name="pref_cat_jbr_jnodes">pref.cat.jbr.jinglenodes</string>
    <string name="pref_key_user_id">pref_key_user_id</string>
    <string name="pref_key_password">pref_key_password</string>
    <string name="pref_key_store_password">pref_key_store_password</string>
    <string name="pref_key_server_address">pref_key_server_address</string>
    <string name="pref_key_server_port">pref_key_server_port</string>
    <string name="pref_key_dtmf_method">pref_key_dtmf_method</string>
    <string name="pref_key_is_server_overridden">pref_key_is_server_overridden</string>
    <string name="pref_key_gmail_notifications">pref_key_gmail_notifications</string>
    <string name="pref_key_google_contact_enabled">pref_key_google_contact_enabled</string>
    <string name="pref_key_allow_non_secure_conn" >pref_key_allow_non_secure_conn</string>
    <string name="pref_key_auto_gen_resource" >pref_key_auto_gen_resource</string>
    <string name="pref_key_resource_name" >pref_key_resource_name</string>
    <string name="pref_key_resource_priority" >pref_key_resource_priority</string>
    <string name="pref_key_ice_enabled" >pref_key_ice_enabled</string>
    <string name="pref_key_google_ice_enabled" >pref_key_google_ice_enabled</string>
    <string name="pref_key_upnp_enabled" >pref_key_upnp_enabled</string>
    <string name="pref_key_auto_discover_jingle" >pref_key_auto_discover_jingle</string>
    <string name="pref_key_use_default_stun" >pref_key_use_default_stun</string>
    <string name="pref_key_stun_turn_servers" >pref_key_stun_turn_servers</string>
    <string name="pref_key_use_jingle_nodes" >pref_key_use_jingle_nodes</string>
    <string name="pref_key_auto_relay_dicovery" >pref_key_auto_relay_dicovery</string>
    <string name="pref_key_jingle_node_list" >pref_key_jingle_node_list</string>
    <string name="pref_key_calling_disabled" >pref_key_calling_disabled</string>
    <string name="pref_key_override_phone_suffix" >pref_key_override_phone_suffix</string>
    <string name="pref_key_tele_bypass_gtalk_caps" >pref_key_tele_bypass_gtalk_caps</string>
    <string name="pref_cat_security_general">pref.cat.security.general</string>
    <string name="pref_cat_security_zrtp">pref.cat.security.zrtp</string>
    <string name="pref_cat_security_sdes">pref.cat.security.sdes</string>
    <string name="pref_key_enable_encryption">pref_key_enable_encryption</string>
    <string name="pref_key_enc_protocols_dialog">pref_key_enc_protos_dialog</string>
    <string name="pref_key_enc_sipzrtp_attr">pref_key_enc_sipzrtp_attr</string>
    <string name="pref_key_enc_savp_option">pref_key_enc_savp_option</string>
    <string name="pref_key_enc_cipher_suites">pref_key_ecn_cipher_suites</string>
    <string name="pref_key_otr_enable">pref.key.otr.enable</string>
    <string name="service_gui_settings_OTR_ENABLE_TITLE">Private messaging</string>
    <string name="service_gui_settings_OTR_ENABLE_ON">Messaging encryption enabled</string>
    <string name="service_gui_settings_OTR_ENABLE_OFF">No messaging encryption</string>
    <string name="pref_key_otr_auto">pref.key.otr.auto</string>
    <string name="service_gui_settings_OTR_AUTO_TITLE">Auto private messaging</string>
    <string name="service_gui_settings_OTR_AUTO_ON">Encrypts sessions automatically</string>
    <string name="service_gui_settings_OTR_AUTO_OFF">Session have to be encrypted manually</string>
    <string name="pref_key_otr_require">pref.key.otr.require</string>
    <string name="service_gui_settings_OTR_REQUIRE_TITLE">Require private messaging</string>
    <string name="service_gui_settings_OTR_REQUIRE_ON">Only secure sessions will be accepted</string>
    <string name="service_gui_settings_OTR_REQUIRE_OFF">Secure messaging will be used if supported</string>
    <string name="service_gui_settings_ADVANCED">Advanced</string>
    <string name="service_gui_settings_LOGGING_ENABLE_TITLE">Packet logging</string>
    <string name="service_gui_settings_LOGGING_ENABLE_SUMMARY_ON">Logs debug packets of various protocols</string>
    <string name="service_gui_settings_LOGGING_ENABLE_SUMMARY_OFF">No packets will be logged</string>
    <string name="pref_key_logging_enable">pref.key.logging.enable</string>
    <string name="pref_cat_settings_logging_protocol">pref.cat.settings.logging.protocol</string>
    <string name="service_gui_settings_PROTOCOL">Protocol</string>
    <string name="service_gui_settings_LOGGING_SIP">SIP</string>
    <string name="pref_key_logging_sip">pref.key.logging.sip</string>
    <string name="service_gui_settings_LOGGING_XMPP">XMPP</string>
    <string name="pref_key_logging_xmpp">pref.key.logging.xmpp</string>
    <string name="service_gui_settings_LOGGING_RTP">RTP</string>
    <string name="service_gui_settings_LOGGING_RTP_SUMMARY">stores 1 packet out of every 5000</string>
    <string name="pref_key_logging_rtp">pref.key.logging.rtp</string>
    <string name="service_gui_settings_LOGGING_ICE4J">ice4j.org</string>
    <string name="pref_key_logging_ice4j">pref.key.logging.ice4j</string>
    <string name="pref_cat_settings_logging_advanced">pref.cat.settings.logging.advanced</string>
    <string name="service_gui_settings_LOGGING_FILE_COUNT">Number of log files</string>
    <string name="pref_key_logging_file_count">pref.key.logging.file_count</string>
    <string name="service_gui_settings_LOGGING_LIMIT">Maximum file size (in KB)</string>
    <string name="pref_key_logging_limit">pref.key.logging.limit</string>
    <string name="service_gui_settings_SILK_FEC">Use inband FEC</string>
    <string name="service_gui_settings_SILK_ASSUME_PL">Always assume packet loss</string>
    <string name="service_gui_settings_SILK_FEC_SAT">Speech activity threshold (0–1)</string>
    <string name="service_gui_settings_SILK_ADVERTISE_FEC">Advertise FEC support in SDP</string>
    <string name="pref_key_silk_fec">net.java.sip.communicator.impl.neomedia.codec.audio.silk.encoder.USE_FEC</string>
    <string name="pref_key_silk_assume_pl">net.java.sip.communicator.impl.neomedia.codec.audio.silk.encoder.AWLAYS_ASSUME_PACKET_LOSS</string>
    <string name="pref_key_silk_fec_sat">net.java.sip.communicator.impl.neomedia.codec.audio.silk.encoder.SPEECH_ACTIVITY_THRESHOLD</string>
    <string name="pref_key_silk_advertise_FEC">net.java.sip.communicator.impl.neomedia.codec.audio.silk.ADVERTISE_FEC</string>
</resources>