<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/service_gui_JBR_USER_CATEGORY"
            android:key="@string/pref_cat_account"
            >
        <EditTextPreference
                android:key="@string/pref_key_user_id"
                android:title="@string/service_gui_JBR_USER"
                android:enabled="false"
                />
        <EditTextPreference
                android:key="@string/pref_key_password"
                android:title="@string/service_gui_JBR_PASSWORD"
                android:inputType="textPassword"
                />
        <CheckBoxPreference
                android:key="@string/pref_key_store_password"
                android:title="@string/service_gui_JBR_STORE_PASSWORD"
                />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/service_gui_JBR_ADVANCED"
            android:key="@string/pref_cat_jbr_advanced"
            >
        <PreferenceScreen
                android:key="@string/pref_screen_jbr_conn"
                android:title="@string/service_gui_JBR_CONNECTION"
                android:summary="@string/service_gui_JBR_CONN_SUMMARY">
            <PreferenceCategory
                    android:key="@string/pref_cat_jbr_conn_general"
                    android:title="@string/service_gui_JBR_CONN_GENERAL" >
                <CheckBoxPreference
                        android:key="@string/pref_key_gmail_notifications"
                        android:title="@string/service_gui_JBR_GMAIL_NOTIFICATIONS"
                        />
                <CheckBoxPreference
                        android:key="@string/pref_key_google_contact_enabled"
                        android:title="@string/service_gui_JBR_GOOGLE_CONTACTS_SEARCH"
                        />
                <CheckBoxPreference
                        android:key="@string/pref_key_allow_non_secure_conn"
                        android:title="@string/service_gui_JBR_ALLOW_NON_SECURE"
                        />
                <ListPreference
                        android:key="@string/pref_key_dtmf_method"
                        android:title="@string/service_gui_JBR_DTMF_METHOD"

                        android:dialogTitle="@string/service_gui_JBR_DTMF_SUMMARY"

                        android:entries="@array/pref_jabber_dtmf_method"
                        android:entryValues="@array/pref_jabber_dtmf_method_values"
                        />
            </PreferenceCategory>
            <PreferenceCategory
                    android:key="@string/pref_cat_jbr_server_opts"
                    android:title="@string/service_gui_JBR_SERVER_OPTIONS" >
                <CheckBoxPreference
                        android:key="@string/pref_key_is_server_overridden"
                        android:title="@string/service_gui_JBR_OVERRIDE_SERVER"
                        />
                <EditTextPreference
                    android:key="@string/pref_key_server_address"
                    android:title="@string/service_gui_JBR_SERVER"
                    android:dependency="@string/pref_key_is_server_overridden"
                    />
                <EditTextPreference
                    android:key="@string/pref_key_server_port"
                    android:title="@string/service_gui_JBR_PORT"
                    android:inputType="number"
                    android:dependency="@string/pref_key_is_server_overridden"
                    />
            </PreferenceCategory>
            <PreferenceCategory
                    android:key="@string/pref_cat_jbr_resource"
                    android:title="@string/service_gui_JBR_RESOURCE" >
                <CheckBoxPreference
                        android:key="@string/pref_key_auto_gen_resource"
                        android:disableDependentsState="true"
                        android:title="@string/service_gui_JBR_RES_AUTO_GEN"
                        />
                <EditTextPreference
                        android:key="@string/pref_key_resource_name"
                        android:title="@string/service_gui_JBR_RESURCE_NAME"
                        android:dependency="@string/pref_key_auto_gen_resource"
                        />
                <EditTextPreference
                        android:key="@string/pref_key_resource_priority"
                        android:title="@string/service_gui_JBR_PRIORITY"
                        android:inputType="number"
                        />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="@string/pref_screen_jbr_ice"
                android:title="@string/service_gui_JBR_ICE"
                android:summary="@string/service_gui_JBR_ICE_SUMMARY">
            <PreferenceCategory
                    android:key="@string/pref_cat_jbr_ice_general"
                    android:title="@string/service_gui_JBR_ICE_GENERAL" >
                <CheckBoxPreference
                        android:key="@string/pref_key_ice_enabled"
                        android:title="@string/service_gui_JBR_USE_ICE"
                        />
                <CheckBoxPreference
                        android:key="@string/pref_key_google_ice_enabled"
                        android:title="@string/service_gui_JBR_USE_GOOGLE_ICE"
                        />
                <CheckBoxPreference
                        android:key="@string/pref_key_upnp_enabled"
                        android:title="@string/service_gui_JBR_USE_UPNP"
                        />
                <CheckBoxPreference
                        android:key="@string/pref_key_auto_discover_jingle"
                        android:title="@string/service_gui_JBR_AUTO_STUN_DICOVERY"
                        />
                <CheckBoxPreference
                        android:key="@string/pref_key_use_default_stun"
                        android:title="@string/service_gui_JBR_USE_DEFAULT_STUN"
                        />
                <Preference
                        android:key="@string/pref_key_stun_turn_servers"
                        android:title="@string/service_gui_JBR_STUN_LIST"
                        />
            </PreferenceCategory>
            <PreferenceCategory
                    android:key="@string/pref_cat_jbr_jnodes"
                    android:title="@string/service_gui_JBR_JINGLE_NODES">
                <CheckBoxPreference
                        android:key="@string/pref_key_use_jingle_nodes"
                        android:title="@string/service_gui_JBR_JINGLE_SUMMARY"
                    />
                <CheckBoxPreference
                        android:key="@string/pref_key_auto_relay_dicovery"
                        android:title="@string/service_gui_JBR_JINGLE_AUTO"
                        />
                <Preference
                    android:key="@string/pref_key_jingle_node_list"
                    android:title="@string/service_gui_JBR_JINGLE_LIST"
                    />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="@string/pref_screen_jbr_tele"
                android:title="@string/service_gui_JBR_TELEPHONY"
                android:summary="@string/service_gui_JBR_TELEPHONY_SUMMARY">
            <CheckBoxPreference
                android:key="@string/pref_key_calling_disabled"
                android:title="@string/service_gui_JBR_DISABLE_JINGLE"
                />
            <EditTextPreference
                android:key="@string/pref_key_override_phone_suffix"
                android:title="@string/service_gui_JBR_TELE_DOMAIN"
                />
            <EditTextPreference
                android:key="@string/pref_key_tele_bypass_gtalk_caps"
                android:title="@string/service_gui_JBR_GTALK_DOMAIN"
                />
        </PreferenceScreen>
        <Preference
                android:key="@string/pref_cat_audio_encoding"
                android:title="@string/service_gui_PREF_AUDIO_ENCODING"
                android:summary="@string/service_gui_PREF_AUDIO_ENC_SUMMARY" >
        </Preference>
        <Preference
                android:key="@string/pref_cat_video_encoding"
                android:title="@string/service_gui_PREF_VIDEO_ENCODING"
                android:summary="@string/service_gui_PREF_VIDEO_ENC_SUMMARY"
                >
        </Preference>
        <Preference
                android:key="@string/pref_key_enable_encryption"
                android:title="@string/service_gui_PREF_ENCRYPTION"
                />
    </PreferenceCategory>
</PreferenceScreen>

